tests/language_tests/pass/0153_pop_statement_discards_value.ee
fn main() {
    let arr = [1, 2];
    pop(arr);
    println(len(arr));
    println(arr[0]);
}
