tests/language_tests/fail/0102_push_bad_nested_target.ee
fn main() {
    let arr = [1];
    push(arr[0], 2);
}
